deploy/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      #serviceAccountName: service-account
      containers:
        - name: my-container
          image: dina2022/quickstart
          #image: us-central1-docker.pkg.dev/gke-cicd-422619/primary-repo/quickstart-image
          ports:
            - containerPort: 8080
